--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
     <header>
-        
+       <nav>
+        <h3 class="nav-title">
+            <span class="ma">Ma</span>
+            <span class="r">r</span>
+            <span class="y">y</span>
+        </h3>
+        <ul>
+            <li>Portfolio</li>
+            <li>Blog</li>
+            <li>
+                <button class="btn-primary">
+                    Hire me
+                </button>
+            </li>
+
+        </ul>
+
+       </nav> 
     </header>
 </body>
 </html>
