--- a/index.html
+++ b/index.html
@@ -1,34 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
-    <header>
-       <nav>
-        <h3 class="nav-title">
-            <span class="ma">Ma</span>
-            <span class="r">r</span>
-            <span class="y">y</span>
-        </h3>
-        <ul>
-            <li>Portfolio</li>
-            <li>Blog</li>
-            <li>
-                <button class="btn-primary">
-                    Hire me
-                </button>
-            </li>
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">
+                <span class="ma">Ma</span>
+                <span class="r">r</span>
+                <span class="y">y</span>
+            </h3>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li>
+                    <button class="btn-primary">
+                        Hire me
+                    </button>
+                </li>
 
-        </ul>
+            </ul>
 
-       </nav> 
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting"> Hi, I am </h3>
+                <h1 class="banner-title"> Mary Hardy </h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <button class="btn-primary"> Download CV </button>
+                <button class="btn-primary"> Contact </button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
+
+    <main>
+        <section class="about-section">
+            <h3 class="section-title">
+                About Me
+            </h3>
+            <p class="section-paragraph">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.
+            </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-desc">Mary Hardy </p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-desc">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-desc">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-desc">Los Angeles, USA/p>
+                </div>
+            </div>
+        </section>
+
+        <!-- what i do section -->
+
+        <section class="what-i-do">
+            <h3 class="section-title"> What I do </h3>
+            <p class="section-paragraph wid">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h3 class="section-title"> A summary of My Resume </h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-col-title">My Education</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-intitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-intitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-intitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-col-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-intitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-intitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-intitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="footer-desc">Please fill out the form on this section to contact with me or call between 9:00 A.M
+                and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href="#"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="#"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="#"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="" class="contact">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Messages"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
+    </footer>
+
 </body>
+
 </html>
